# smartnvr20

./: .env  .gitignore  LICENSE  README.md  architecture.excalidraw  docker-compose.yml  docker-compose_dev.yml
code/src/: CMakeLists.txt  main.cpp
code/src/camera/: main.cpp
code/src/camera/application/: camera.cpp  camera.hpp  cameraDevice.cpp  cameraDevice.hpp
code/src/camera/infrastructure/: cameraConfig.cpp  cameraConfig.hpp
code/src/commbus/: main.cpp
code/src/commbus/domain/: framehandler.cpp  framhandler.hpp
code/src/domain/: camera.hpp  cameraDevice.cpp  cameraDevice.hpp
code/src/infrastructure/: cameraConfig.hpp  framehandler.cpp  framehandler.hpp  framehandlerconfig.cpp  framehandlerconfig.hpp
code/src/infrastructure/RedisClient/: busclient.cpp  busclient.hpp  busclient_exceptions.hpp  busclientimpl.hpp
code/src/interfaces/grpc/protos/: frame.proto  heartbeat.proto
code/src/lib/: FileLocation.hpp  FileNameGenerator.hpp  iBusClient.hpp  iConfiguration.hpp  iToString.hpp
code/src/tests/: camera_test_01.cpp
code/src/tests/domain/: camera_test_01.cpp
code/src/tests/infrastructure/: commbus_test_01.cpp  framehandler_test_01.cpp
code/src/tests/lib/: filelocation_test_01.cpp
config_tests/: appconfig.json  camera_config_test.json  commbus_test_01_OK.json  commbus_test_01_noPswd.json  commbus_test_01_wrongPort.json  commbus_test_01_wrongPswd.json
deployment/: Dockerfile_backbone  Dockerfile_dev
